apps/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:v0.8.4
          command: ["/app/glance"]
          args: ["--config", "/app/config/glance.yml"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ca-cert
              mountPath: /usr/local/share/ca-certificates
              readOnly: true
            - name: glance-config
              mountPath: /app/config
      volumes:
        - name: ca-cert
          configMap:
            name: step-ca-root-cert
            items:
              - key: "root_ca.crt"
                path: "root_ca.crt"
        - name: glance-config
          configMap:
            name: glance-config
